--- a/Babbacombe.Redis.StrongName.Linq.csproj
+++ b/Babbacombe.Redis.StrongName.Linq.csproj
@@ -2,19 +2,27 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Trevor Prinn</Authors>
     <Company>Babbacombe Computers Ltd</Company>
     <Description>Linq extensions for Redis List and Hash Keys.</Description>
     <Copyright>Copyright © Babbacombe Computers Ltd 2018</Copyright>
-    <PackageLicenseUrl>https://github.com/trevorprinn/Babbacombe.Redis.Linq/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/trevorprinn/Babbacombe.Redis.Linq</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="StackExchange.Redis.StrongName" Version="1.2.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
